--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "car-rental-frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://car-rental-backend-fpn8.onrender.com",
+  "proxy": "https://rent-service-backend.onrender.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
